--- a/for Practice/practice_note.ipynb
+++ b/for Practice/practice_note.ipynb
@@ -2308,6 +2308,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## join 을 이용한 연결"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    A   B   C\n",
+      "1  A1  B1  C1\n",
+      "2  A2  B2  C2 \n",
+      "\n",
+      "    B   C   D\n",
+      "3  B3  C3  D3\n",
+      "4  B4  C4  D4 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df5 = make_df('ABC',[1,2])\n",
+    "df6 = make_df('BCD',[3,4])\n",
+    "print(df5, '\\n')\n",
+    "print(df6, '\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     A   B   C    D\n",
+      "1   A1  B1  C1  NaN\n",
+      "2   A2  B2  C2  NaN\n",
+      "3  NaN  B3  C3   D3\n",
+      "4  NaN  B4  C4   D4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pd.concat([df5, df6]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    B   C\n",
+      "1  B1  C1\n",
+      "2  B2  C2\n",
+      "3  B3  C3\n",
+      "4  B4  C4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pd.concat([df5,df6],join='inner')) # 교집합만 섞어"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
