--- a/for Practice/practice_note.ipynb
+++ b/for Practice/practice_note.ipynb
@@ -2385,6 +2385,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    A   B\n",
+      "1  A1  B1\n",
+      "2  A2  B2\n",
+      "    A   B\n",
+      "3  A3  B3\n",
+      "4  A4  B4\n",
+      "    A   B\n",
+      "1  A1  B1\n",
+      "2  A2  B2\n",
+      "3  A3  B3\n",
+      "4  A4  B4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/4f/jnlgcb9n6pg311w43wdsllwc0000gn/T/ipykernel_10584/1180077316.py:3: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  print(df1); print(df2); print(df1.append(df2))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pd.concat([df5,df6]) = df5.append(df6)\n",
+    "\n",
+    "print(df1); print(df2); print(df1.append(df2))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
