--- a/for Practice/practice_note.ipynb
+++ b/for Practice/practice_note.ipynb
@@ -2422,6 +2422,173 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  employee        group\n",
+      "0      Bob   Accounting\n",
+      "1     Jake  Engineering\n",
+      "2     Lisa  Engineering\n",
+      "3      Sue           HR\n",
+      "  employee  hire_date\n",
+      "0     Lisa       2004\n",
+      "1      Bob       2008\n",
+      "2     Jake       2012\n",
+      "3      Sue       2014\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1 = pd.DataFrame({'employee': ['Bob','Jake','Lisa','Sue'],\n",
+    "                    'group': ['Accounting','Engineering','Engineering','HR']})\n",
+    "df2 = pd.DataFrame({'employee': ['Lisa','Bob','Jake','Sue'],\n",
+    "                    'hire_date': [2004, 2008, 2012, 2014]})\n",
+    "\n",
+    "print(df1); print(df2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  employee        group  hire_date\n",
+      "0      Bob   Accounting       2008\n",
+      "1     Jake  Engineering       2012\n",
+      "2     Lisa  Engineering       2004\n",
+      "3      Sue           HR       2014\n"
+     ]
+    }
+   ],
+   "source": [
+    "df3 = pd.merge(df1, df2) #자동으로 열 사용해서 합체!\n",
+    "print(df3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/4f/jnlgcb9n6pg311w43wdsllwc0000gn/T/ipykernel_10584/3362903225.py:1: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df3 = df1.append(df2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>employee</th>\n",
+       "      <th>group</th>\n",
+       "      <th>hire_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Bob</td>\n",
+       "      <td>Accounting</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jake</td>\n",
+       "      <td>Engineering</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Lisa</td>\n",
+       "      <td>Engineering</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sue</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Lisa</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2004.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bob</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2008.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jake</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2012.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sue</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2014.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  employee        group  hire_date\n",
+       "0      Bob   Accounting        NaN\n",
+       "1     Jake  Engineering        NaN\n",
+       "2     Lisa  Engineering        NaN\n",
+       "3      Sue           HR        NaN\n",
+       "0     Lisa          NaN     2004.0\n",
+       "1      Bob          NaN     2008.0\n",
+       "2     Jake          NaN     2012.0\n",
+       "3      Sue          NaN     2014.0"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3 = df1.append(df2)\n",
+    "df3 # merge랑 다르게 나옴 "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
