--- a/for Practice/practice_note.ipynb
+++ b/for Practice/practice_note.ipynb
@@ -2453,7 +2453,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  employee        group  hire_date\n",
+      "0      Bob   Accounting        NaN\n",
+      "1     Jake  Engineering        NaN\n",
+      "2     Lisa  Engineering        NaN\n",
+      "3      Sue           HR        NaN\n",
+      "0     Lisa          NaN     2004.0\n",
+      "1      Bob          NaN     2008.0\n",
+      "2     Jake          NaN     2012.0\n",
+      "3      Sue          NaN     2014.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/4f/jnlgcb9n6pg311w43wdsllwc0000gn/T/ipykernel_10584/4240859927.py:1: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df_append = df1.append(df2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_append = df1.append(df2) # 그냥 안섞고 다 붙힘\n",
+    "print(df_append)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -2475,116 +2509,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/var/folders/4f/jnlgcb9n6pg311w43wdsllwc0000gn/T/ipykernel_10584/3362903225.py:1: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  df3 = df1.append(df2)\n"
+      "  employee        group  hire_date\n",
+      "0      Bob   Accounting       2008\n",
+      "1     Jake  Engineering       2012\n",
+      "2     Lisa  Engineering       2004\n",
+      "3      Sue           HR       2014\n",
+      "         group supervisor\n",
+      "0   Accounting      Carly\n",
+      "1  Engineering      Guido\n",
+      "2           HR      Steve\n",
+      "  employee        group  hire_date supervisor\n",
+      "0      Bob   Accounting       2008      Carly\n",
+      "1     Jake  Engineering       2012      Guido\n",
+      "2     Lisa  Engineering       2004      Guido\n",
+      "3      Sue           HR       2014      Steve\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>employee</th>\n",
-       "      <th>group</th>\n",
-       "      <th>hire_date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Bob</td>\n",
-       "      <td>Accounting</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Jake</td>\n",
-       "      <td>Engineering</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Lisa</td>\n",
-       "      <td>Engineering</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Sue</td>\n",
-       "      <td>HR</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Lisa</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2004.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Bob</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2008.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Jake</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2012.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Sue</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2014.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  employee        group  hire_date\n",
-       "0      Bob   Accounting        NaN\n",
-       "1     Jake  Engineering        NaN\n",
-       "2     Lisa  Engineering        NaN\n",
-       "3      Sue           HR        NaN\n",
-       "0     Lisa          NaN     2004.0\n",
-       "1      Bob          NaN     2008.0\n",
-       "2     Jake          NaN     2012.0\n",
-       "3      Sue          NaN     2014.0"
-      ]
-     },
-     "execution_count": 146,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df3 = df1.append(df2)\n",
-    "df3 # merge랑 다르게 나옴 "
+    "## many to one join (다대일 조인)\n",
+    "df4 = pd.DataFrame({'group' : ['Accounting','Engineering','HR'],\n",
+    "                    'supervisor': ['Carly','Guido','Steve']})\n",
+    "\n",
+    "print(df3); print(df4); print(pd.merge(df3, df4))"
    ]
   },
   {
