--- a/for Practice/practice_note.ipynb
+++ b/for Practice/practice_note.ipynb
@@ -2543,6 +2543,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  employee        group\n",
+      "0      Bob   Accounting\n",
+      "1     Jake  Engineering\n",
+      "2     Lisa  Engineering\n",
+      "3      Sue           HR\n",
+      "         group        skills\n",
+      "0   Accounting          math\n",
+      "1   Accounting  spreadsheets\n",
+      "2  Engineering        coding\n",
+      "3  Engineering         linux\n",
+      "4           HR  spreadsheets\n",
+      "5           HR  organization\n",
+      "  employee        group        skills\n",
+      "0      Bob   Accounting          math\n",
+      "1      Bob   Accounting  spreadsheets\n",
+      "2     Jake  Engineering        coding\n",
+      "3     Jake  Engineering         linux\n",
+      "4     Lisa  Engineering        coding\n",
+      "5     Lisa  Engineering         linux\n",
+      "6      Sue           HR  spreadsheets\n",
+      "7      Sue           HR  organization\n"
+     ]
+    }
+   ],
+   "source": [
+    "df5 = pd.DataFrame({'group' : ['Accounting','Accounting','Engineering','Engineering','HR','HR'],\n",
+    "                    'skills': ['math','spreadsheets','coding','linux','spreadsheets','organization']})\n",
+    "\n",
+    "print(df1); print(df5); print(pd.merge(df1,df5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  employee        group\n",
+      "0      Bob   Accounting\n",
+      "1     Jake  Engineering\n",
+      "2     Lisa  Engineering\n",
+      "3      Sue           HR\n",
+      "  employee  hire_date\n",
+      "0     Lisa       2004\n",
+      "1      Bob       2008\n",
+      "2     Jake       2012\n",
+      "3      Sue       2014\n",
+      "  employee        group  hire_date\n",
+      "0      Bob   Accounting       2008\n",
+      "1     Jake  Engineering       2012\n",
+      "2     Lisa  Engineering       2004\n",
+      "3      Sue           HR       2014\n"
+     ]
+    }
+   ],
+   "source": [
+    "## explicit join (on 사용)\n",
+    "\n",
+    "print(df1); print(df2); print(pd.merge(df1,df2, on='employee'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
