--- a/for Practice/practice_note.ipynb
+++ b/for Practice/practice_note.ipynb
@@ -2616,6 +2616,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  employee        group\n",
+      "0      Bob   Accounting\n",
+      "1     Jake  Engineering\n",
+      "2     Lisa  Engineering\n",
+      "3      Sue           HR\n",
+      "   name  salary\n",
+      "0   Bob   70000\n",
+      "1  Jake   80000\n",
+      "2  Lisa  120000\n",
+      "3   Sue   90000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>employee</th>\n",
+       "      <th>group</th>\n",
+       "      <th>name</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Bob</td>\n",
+       "      <td>Accounting</td>\n",
+       "      <td>Bob</td>\n",
+       "      <td>70000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jake</td>\n",
+       "      <td>Engineering</td>\n",
+       "      <td>Jake</td>\n",
+       "      <td>80000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Lisa</td>\n",
+       "      <td>Engineering</td>\n",
+       "      <td>Lisa</td>\n",
+       "      <td>120000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sue</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>Sue</td>\n",
+       "      <td>90000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  employee        group  name  salary\n",
+       "0      Bob   Accounting   Bob   70000\n",
+       "1     Jake  Engineering  Jake   80000\n",
+       "2     Lisa  Engineering  Lisa  120000\n",
+       "3      Sue           HR   Sue   90000"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3 = pd.DataFrame({'name': ['Bob','Jake','Lisa','Sue'],\n",
+    "                    'salary': [70000,80000,120000,90000]})\n",
+    "print(df1); print(df3); \n",
+    "\n",
+    "pd.merge(df1, df3, left_on='employee', right_on='name')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
