--- a/for Practice/practice_note.ipynb
+++ b/for Practice/practice_note.ipynb
@@ -2718,6 +2718,145 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>employee</th>\n",
+       "      <th>group</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Bob</td>\n",
+       "      <td>Accounting</td>\n",
+       "      <td>70000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jake</td>\n",
+       "      <td>Engineering</td>\n",
+       "      <td>80000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Lisa</td>\n",
+       "      <td>Engineering</td>\n",
+       "      <td>120000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sue</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>90000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  employee        group  salary\n",
+       "0      Bob   Accounting   70000\n",
+       "1     Jake  Engineering   80000\n",
+       "2     Lisa  Engineering  120000\n",
+       "3      Sue           HR   90000"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.merge(df1, df3, left_on='employee', right_on='name').drop('name',axis=1) # left/right_on으로 정렬 후 drop으로 중복 삭제"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                group\n",
+      "employee             \n",
+      "Bob        Accounting\n",
+      "Jake      Engineering\n",
+      "Lisa      Engineering\n",
+      "Sue                HR\n",
+      "          hire_date\n",
+      "employee           \n",
+      "Lisa           2004\n",
+      "Bob            2008\n",
+      "Jake           2012\n",
+      "Sue            2014\n"
+     ]
+    }
+   ],
+   "source": [
+    "# left/right_index\n",
+    "\n",
+    "df1a = df1.set_index('employee')\n",
+    "df2a = df2.set_index('employee')\n",
+    "\n",
+    "print(df1a); print(df2a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                group  hire_date\n",
+      "employee                        \n",
+      "Bob        Accounting       2008\n",
+      "Jake      Engineering       2012\n",
+      "Lisa      Engineering       2004\n",
+      "Sue                HR       2014\n",
+      "         group  name  salary\n",
+      "0   Accounting   Bob   70000\n",
+      "1  Engineering  Jake   80000\n",
+      "2  Engineering  Lisa  120000\n",
+      "3           HR   Sue   90000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pd.merge(df1a, df2a, left_index=True, right_index=True)) # join method 로 구현 \n",
+    "# or\n",
+    "print(pd.merge(df1a, df3, left_index=True, right_on='name'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
