--- a/for Practice/DataScienceBook_DS/선형대수_w.Python.ipynb
+++ b/for Practice/DataScienceBook_DS/선형대수_w.Python.ipynb
@@ -877,11 +877,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import copy\n",
     "\n",
     "def solve(A, b):\n",
     "    X = deepcopy(A)\n",
@@ -935,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +947,7 @@
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
       "\u001b[1;32m/Users/minjoonlim/Desktop/python workspace/mjmj/for Practice/DataScienceBook_DS/선형대수_w.Python.ipynb Cell 44'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/minjoonlim/Desktop/python%20workspace/mjmj/for%20Practice/DataScienceBook_DS/%EC%84%A0%ED%98%95%EB%8C%80%EC%88%98_w.Python.ipynb#ch0000044?line=0'>1</a>\u001b[0m solve(X,y)\n",
-      "\u001b[1;32m/Users/minjoonlim/Desktop/python workspace/mjmj/for Practice/DataScienceBook_DS/선형대수_w.Python.ipynb Cell 43'\u001b[0m in \u001b[0;36msolve\u001b[0;34m(A, b)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/minjoonlim/Desktop/python%20workspace/mjmj/for%20Practice/DataScienceBook_DS/%EC%84%A0%ED%98%95%EB%8C%80%EC%88%98_w.Python.ipynb#ch0000043?line=2'>3</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msolve\u001b[39m(A, b):\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/minjoonlim/Desktop/python%20workspace/mjmj/for%20Practice/DataScienceBook_DS/%EC%84%A0%ED%98%95%EB%8C%80%EC%88%98_w.Python.ipynb#ch0000043?line=3'>4</a>\u001b[0m     X \u001b[39m=\u001b[39m deepcopy(A)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/minjoonlim/Desktop/python%20workspace/mjmj/for%20Practice/DataScienceBook_DS/%EC%84%A0%ED%98%95%EB%8C%80%EC%88%98_w.Python.ipynb#ch0000043?line=4'>5</a>\u001b[0m     sol \u001b[39m=\u001b[39m deepcopy(b) \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/minjoonlim/Desktop/python%20workspace/mjmj/for%20Practice/DataScienceBook_DS/%EC%84%A0%ED%98%95%EB%8C%80%EC%88%98_w.Python.ipynb#ch0000043?line=5'>6</a>\u001b[0m     n \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(X)\n",
+      "\u001b[1;32m/Users/minjoonlim/Desktop/python workspace/mjmj/for Practice/DataScienceBook_DS/선형대수_w.Python.ipynb Cell 43'\u001b[0m in \u001b[0;36msolve\u001b[0;34m(A, b)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/minjoonlim/Desktop/python%20workspace/mjmj/for%20Practice/DataScienceBook_DS/%EC%84%A0%ED%98%95%EB%8C%80%EC%88%98_w.Python.ipynb#ch0000043?line=3'>4</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msolve\u001b[39m(A, b):\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/minjoonlim/Desktop/python%20workspace/mjmj/for%20Practice/DataScienceBook_DS/%EC%84%A0%ED%98%95%EB%8C%80%EC%88%98_w.Python.ipynb#ch0000043?line=4'>5</a>\u001b[0m     X \u001b[39m=\u001b[39m deepcopy(A)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/minjoonlim/Desktop/python%20workspace/mjmj/for%20Practice/DataScienceBook_DS/%EC%84%A0%ED%98%95%EB%8C%80%EC%88%98_w.Python.ipynb#ch0000043?line=5'>6</a>\u001b[0m     sol \u001b[39m=\u001b[39m deepcopy(b) \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/minjoonlim/Desktop/python%20workspace/mjmj/for%20Practice/DataScienceBook_DS/%EC%84%A0%ED%98%95%EB%8C%80%EC%88%98_w.Python.ipynb#ch0000043?line=6'>7</a>\u001b[0m     n \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(X)\n",
       "\u001b[0;31mNameError\u001b[0m: name 'deepcopy' is not defined"
      ]
     }
@@ -954,6 +955,38 @@
    "source": [
     "solve(X,y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.13043478]\n",
+      " [0.04347826]\n",
+      " [1.52173913]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# numpy\n",
+    "\n",
+    "X = np.array([[3,2,1], [2,6,-1], [4,0,-1]])\n",
+    "y = np.array([[5], [1], [3]])\n",
+    "\n",
+    "sol = np.linalg.solve(X,y)\n",
+    "print(sol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
