--- a/for Practice/practice_note2.ipynb
+++ b/for Practice/practice_note2.ipynb
@@ -310,6 +310,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x13497e8c0>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "planets.groupby('method')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.generic.SeriesGroupBy object at 0x13497e860>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "planets.groupby('method')['orbital_period']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "method\n",
+       "Astrometry                         631.180000\n",
+       "Eclipse Timing Variations         4343.500000\n",
+       "Imaging                          27500.000000\n",
+       "Microlensing                      3300.000000\n",
+       "Orbital Brightness Modulation        0.342887\n",
+       "Pulsar Timing                       66.541900\n",
+       "Pulsation Timing Variations       1170.000000\n",
+       "Radial Velocity                    360.200000\n",
+       "Transit                              5.714932\n",
+       "Transit Timing Variations           57.011000\n",
+       "Name: orbital_period, dtype: float64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "planets.groupby('method')['orbital_period'].median()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
