--- a/for Practice/practice_note2.ipynb
+++ b/for Practice/practice_note2.ipynb
@@ -381,6 +381,494 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>method</th>\n",
+       "      <th>number</th>\n",
+       "      <th>orbital_period</th>\n",
+       "      <th>mass</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Radial Velocity</td>\n",
+       "      <td>1</td>\n",
+       "      <td>269.300</td>\n",
+       "      <td>7.10</td>\n",
+       "      <td>77.40</td>\n",
+       "      <td>2006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Radial Velocity</td>\n",
+       "      <td>1</td>\n",
+       "      <td>874.774</td>\n",
+       "      <td>2.21</td>\n",
+       "      <td>56.95</td>\n",
+       "      <td>2008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Radial Velocity</td>\n",
+       "      <td>1</td>\n",
+       "      <td>763.000</td>\n",
+       "      <td>2.60</td>\n",
+       "      <td>19.84</td>\n",
+       "      <td>2011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Radial Velocity</td>\n",
+       "      <td>1</td>\n",
+       "      <td>326.030</td>\n",
+       "      <td>19.40</td>\n",
+       "      <td>110.62</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Radial Velocity</td>\n",
+       "      <td>1</td>\n",
+       "      <td>516.220</td>\n",
+       "      <td>10.50</td>\n",
+       "      <td>119.47</td>\n",
+       "      <td>2009</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            method  number  orbital_period   mass  distance  year\n",
+       "0  Radial Velocity       1         269.300   7.10     77.40  2006\n",
+       "1  Radial Velocity       1         874.774   2.21     56.95  2008\n",
+       "2  Radial Velocity       1         763.000   2.60     19.84  2011\n",
+       "3  Radial Velocity       1         326.030  19.40    110.62  2007\n",
+       "4  Radial Velocity       1         516.220  10.50    119.47  2009"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "planets.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Astrometry                     shape=(2, 6)\n",
+      "Eclipse Timing Variations      shape=(9, 6)\n",
+      "Imaging                        shape=(38, 6)\n",
+      "Microlensing                   shape=(23, 6)\n",
+      "Orbital Brightness Modulation  shape=(3, 6)\n",
+      "Pulsar Timing                  shape=(5, 6)\n",
+      "Pulsation Timing Variations    shape=(1, 6)\n",
+      "Radial Velocity                shape=(553, 6)\n",
+      "Transit                        shape=(397, 6)\n",
+      "Transit Timing Variations      shape=(4, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for (method, group) in planets.groupby('method'):\n",
+    "    print(\"{0:30s} shape={1}\".format(method, group.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "       method                       \n",
+       "count  Astrometry                          2.0\n",
+       "       Eclipse Timing Variations           9.0\n",
+       "       Imaging                            38.0\n",
+       "       Microlensing                       23.0\n",
+       "       Orbital Brightness Modulation       3.0\n",
+       "                                         ...  \n",
+       "max    Pulsar Timing                    2011.0\n",
+       "       Pulsation Timing Variations      2007.0\n",
+       "       Radial Velocity                  2014.0\n",
+       "       Transit                          2014.0\n",
+       "       Transit Timing Variations        2014.0\n",
+       "Length: 80, dtype: float64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "planets.groupby('method')['year'].describe().unstack()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>key</th>\n",
+       "      <th>data1</th>\n",
+       "      <th>data2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>B</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>C</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>B</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>C</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  key  data1  data2\n",
+       "0   A      0      5\n",
+       "1   B      1      0\n",
+       "2   C      2      3\n",
+       "3   A      3      3\n",
+       "4   B      4      7\n",
+       "5   C      5      9"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rng = np.random.RandomState(0)\n",
+    "df = pd.DataFrame({'key': ['A','B','C','A','B','C'],\n",
+    "                   'data1' : range(6),\n",
+    "                   'data2' : rng.randint(0, 10, 6)},\n",
+    "                  columns = ['key','data1','data2'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"3\" halign=\"left\">data1</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">data2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>min</th>\n",
+       "      <th>median</th>\n",
+       "      <th>max</th>\n",
+       "      <th>min</th>\n",
+       "      <th>median</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>key</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    data1            data2           \n",
+       "      min median max   min median max\n",
+       "key                                  \n",
+       "A       0    1.5   3     3    4.0   5\n",
+       "B       1    2.5   4     0    3.5   7\n",
+       "C       2    3.5   5     3    6.0   9"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('key').aggregate([min, np.median,max])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>data1</th>\n",
+       "      <th>data2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>key</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     data1  data2\n",
+       "key              \n",
+       "A        0      5\n",
+       "B        1      7\n",
+       "C        2      9"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# or dictionary로 전달\n",
+    "\n",
+    "df.groupby('key').aggregate({'data1' : 'min',\n",
+    "                             'data2' : 'max'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  key  data1  data2\n",
+      "0   A      0      5\n",
+      "1   B      1      0\n",
+      "2   C      2      3\n",
+      "3   A      3      3\n",
+      "4   B      4      7\n",
+      "5   C      5      9\n",
+      "       data1     data2\n",
+      "key                   \n",
+      "A    2.12132  1.414214\n",
+      "B    2.12132  4.949747\n",
+      "C    2.12132  4.242641\n"
+     ]
+    }
+   ],
+   "source": [
+    "# filtering 연산\n",
+    "\n",
+    "def filter_func(x):\n",
+    "    return x['data2'].std() > 4\n",
+    "\n",
+    "print(df); print(df.groupby('key').std())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  key  data1  data2\n",
+      "1   B      1      0\n",
+      "2   C      2      3\n",
+      "4   B      4      7\n",
+      "5   C      5      9\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.groupby('key').filter(filter_func))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
