--- a/for Practice/practice_note2.ipynb
+++ b/for Practice/practice_note2.ipynb
@@ -869,6 +869,150 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>decade</th>\n",
+       "      <th>1980s</th>\n",
+       "      <th>1990s</th>\n",
+       "      <th>2000s</th>\n",
+       "      <th>2010s</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>method</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Astrometry</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Eclipse Timing Variations</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Imaging</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>21.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Microlensing</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>15.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Orbital Brightness Modulation</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pulsar Timing</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pulsation Timing Variations</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Radial Velocity</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>475.0</td>\n",
+       "      <td>424.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Transit</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>712.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Transit Timing Variations</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "decade                         1980s  1990s  2000s  2010s\n",
+       "method                                                   \n",
+       "Astrometry                       0.0    0.0    0.0    2.0\n",
+       "Eclipse Timing Variations        0.0    0.0    5.0   10.0\n",
+       "Imaging                          0.0    0.0   29.0   21.0\n",
+       "Microlensing                     0.0    0.0   12.0   15.0\n",
+       "Orbital Brightness Modulation    0.0    0.0    0.0    5.0\n",
+       "Pulsar Timing                    0.0    9.0    1.0    1.0\n",
+       "Pulsation Timing Variations      0.0    0.0    1.0    0.0\n",
+       "Radial Velocity                  1.0   52.0  475.0  424.0\n",
+       "Transit                          0.0    0.0   64.0  712.0\n",
+       "Transit Timing Variations        0.0    0.0    0.0    9.0"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## grouping 예제\n",
+    "\n",
+    "decade = 10 * (planets['year'] // 10)\n",
+    "decade = decade.astype(str) + 's'\n",
+    "decade.name = 'decade'\n",
+    "\n",
+    "planets.groupby(['method',decade])['number'].sum().unstack().fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
