--- a/for Practice/practice_note2.ipynb
+++ b/for Practice/practice_note2.ipynb
@@ -1320,6 +1320,165 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>class</th>\n",
+       "      <th>First</th>\n",
+       "      <th>Second</th>\n",
+       "      <th>Third</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sex</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>female</th>\n",
+       "      <td>0.968085</td>\n",
+       "      <td>0.921053</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>male</th>\n",
+       "      <td>0.368852</td>\n",
+       "      <td>0.157407</td>\n",
+       "      <td>0.135447</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "class      First    Second     Third\n",
+       "sex                                 \n",
+       "female  0.968085  0.921053  0.500000\n",
+       "male    0.368852  0.157407  0.135447"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titanic.pivot_table('survived',index='sex',columns='class')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>class</th>\n",
+       "      <th>First</th>\n",
+       "      <th>Second</th>\n",
+       "      <th>Third</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">female</th>\n",
+       "      <th>(0, 18]</th>\n",
+       "      <td>0.909091</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.511628</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(18, 80]</th>\n",
+       "      <td>0.972973</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>0.423729</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">male</th>\n",
+       "      <th>(0, 18]</th>\n",
+       "      <td>0.800000</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>0.215686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(18, 80]</th>\n",
+       "      <td>0.375000</td>\n",
+       "      <td>0.071429</td>\n",
+       "      <td>0.133663</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "class               First    Second     Third\n",
+       "sex    age                                   \n",
+       "female (0, 18]   0.909091  1.000000  0.511628\n",
+       "       (18, 80]  0.972973  0.900000  0.423729\n",
+       "male   (0, 18]   0.800000  0.600000  0.215686\n",
+       "       (18, 80]  0.375000  0.071429  0.133663"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "age = pd.cut(titanic['age'], [0,18,80]) # 연령 구간 별\n",
+    "titanic.pivot_table('survived', index = ['sex',age], columns = 'class') # 'age'로 치면 titanic 안에 있는 애가 나옴;; "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
