--- a/for Practice/practice_note2.ipynb
+++ b/for Practice/practice_note2.ipynb
@@ -1479,6 +1479,302 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>fare</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">(-0.512, 170.776]</th>\n",
+       "      <th>(170.776, 341.553]</th>\n",
+       "      <th>(341.553, 512.329]</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>class</th>\n",
+       "      <th>First</th>\n",
+       "      <th>Second</th>\n",
+       "      <th>Third</th>\n",
+       "      <th>First</th>\n",
+       "      <th>First</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">female</th>\n",
+       "      <th>(0, 18]</th>\n",
+       "      <td>0.875000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.511628</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(18, 80]</th>\n",
+       "      <td>0.969231</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>0.423729</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">male</th>\n",
+       "      <th>(0, 18]</th>\n",
+       "      <td>0.800000</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>0.215686</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(18, 80]</th>\n",
+       "      <td>0.377778</td>\n",
+       "      <td>0.071429</td>\n",
+       "      <td>0.133663</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "fare            (-0.512, 170.776]                     (170.776, 341.553]  \\\n",
+       "class                       First    Second     Third              First   \n",
+       "sex    age                                                                 \n",
+       "female (0, 18]           0.875000  1.000000  0.511628                1.0   \n",
+       "       (18, 80]          0.969231  0.900000  0.423729                1.0   \n",
+       "male   (0, 18]           0.800000  0.600000  0.215686                NaN   \n",
+       "       (18, 80]          0.377778  0.071429  0.133663                0.0   \n",
+       "\n",
+       "fare            (341.553, 512.329]  \n",
+       "class                        First  \n",
+       "sex    age                          \n",
+       "female (0, 18]                 NaN  \n",
+       "       (18, 80]                1.0  \n",
+       "male   (0, 18]                 NaN  \n",
+       "       (18, 80]                1.0  "
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fare = pd.cut(titanic['fare'], 3)\n",
+    "titanic.pivot_table('survived', index = ['sex', age], columns = [fare, 'class'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"3\" halign=\"left\">fare</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">survived</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>class</th>\n",
+       "      <th>First</th>\n",
+       "      <th>Second</th>\n",
+       "      <th>Third</th>\n",
+       "      <th>First</th>\n",
+       "      <th>Second</th>\n",
+       "      <th>Third</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sex</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>female</th>\n",
+       "      <td>106.125798</td>\n",
+       "      <td>21.970121</td>\n",
+       "      <td>16.118810</td>\n",
+       "      <td>91</td>\n",
+       "      <td>70</td>\n",
+       "      <td>72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>male</th>\n",
+       "      <td>67.226127</td>\n",
+       "      <td>19.741782</td>\n",
+       "      <td>12.661633</td>\n",
+       "      <td>45</td>\n",
+       "      <td>17</td>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              fare                       survived             \n",
+       "class        First     Second      Third    First Second Third\n",
+       "sex                                                           \n",
+       "female  106.125798  21.970121  16.118810       91     70    72\n",
+       "male     67.226127  19.741782  12.661633       45     17    47"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titanic.pivot_table(index = 'sex', columns = 'class',\n",
+    "                    aggfunc={'survived':sum, 'fare':'mean'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>class</th>\n",
+       "      <th>First</th>\n",
+       "      <th>Second</th>\n",
+       "      <th>Third</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sex</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>female</th>\n",
+       "      <td>0.968085</td>\n",
+       "      <td>0.921053</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.742038</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>male</th>\n",
+       "      <td>0.368852</td>\n",
+       "      <td>0.157407</td>\n",
+       "      <td>0.135447</td>\n",
+       "      <td>0.188908</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Total</th>\n",
+       "      <td>0.629630</td>\n",
+       "      <td>0.472826</td>\n",
+       "      <td>0.242363</td>\n",
+       "      <td>0.383838</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "class      First    Second     Third     Total\n",
+       "sex                                           \n",
+       "female  0.968085  0.921053  0.500000  0.742038\n",
+       "male    0.368852  0.157407  0.135447  0.188908\n",
+       "Total   0.629630  0.472826  0.242363  0.383838"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titanic.pivot_table('survived', index = 'sex', columns = 'class', margins = True, margins_name = 'Total') # margin 해서 총합 구할 수 있음"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
