--- a/for Practice/DataScienceBook_DS/[예제] 출생률 데이터.ipynb
+++ b/for Practice/DataScienceBook_DS/[예제] 출생률 데이터.ipynb
@@ -228,14 +228,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 추가 데이터 탐색"
+    "## pandas 문자열 탐색"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
