--- a/for Practice/DataScienceBook_DS/[예제] 출생률 데이터.ipynb
+++ b/for Practice/DataScienceBook_DS/[예제] 출생률 데이터.ipynb
@@ -232,6 +232,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 4,  6, 10, 14, 22, 26])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x = np.array([2,3,5,7,11,13])\n",
+    "x * 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Peter', 'Paul', 'Mary', 'Guido']"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = ['peter','paul','mary','guido']\n",
+    "[s.capitalize() for s in data]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
