--- a/for Practice/DataScienceBook_DS/[예제] 출생률 데이터.ipynb
+++ b/for Practice/DataScienceBook_DS/[예제] 출생률 데이터.ipynb
@@ -275,6 +275,147 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    Peter\n",
+       "1     Paul\n",
+       "2     Mary\n",
+       "3    Guido\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "names = pd.Series(data)\n",
+    "names\n",
+    "names.str.capitalize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "monte = pd.Series(['Graham Chapman','John Cleese','Terry Gilliam','Eric Idle',\n",
+    "                   'Terry Jones', 'Michael Palin'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    graham chapman\n",
+       "1       john cleese\n",
+       "2     terry gilliam\n",
+       "3         eric idle\n",
+       "4       terry jones\n",
+       "5     michael palin\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "monte.str.lower() # 소문자화 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    14\n",
+       "1    11\n",
+       "2    13\n",
+       "3     9\n",
+       "4    11\n",
+       "5    13\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "monte.str.len()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    False\n",
+       "1    False\n",
+       "2     True\n",
+       "3    False\n",
+       "4     True\n",
+       "5    False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "monte.str.startswith('T')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    [Graham, Chapman]\n",
+       "1       [John, Cleese]\n",
+       "2     [Terry, Gilliam]\n",
+       "3         [Eric, Idle]\n",
+       "4       [Terry, Jones]\n",
+       "5     [Michael, Palin]\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "monte.str.split()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
